# precise_spelling_corrector

./: README.md  pyproject.toml  requirements.txt
src/precise_spell_correction/: __init__.py  correct_text.py  main.py  readers.py
test/: test_directory_structure.py  test_spell_correction.py
