[build-system]
requires = ['flit_core >=3.2']
build-backend = 'flit_core.buildapi'

[project]
name = 'precise_spell_correction'
version = '0.0.1'
authors = [
    { name = 'dcronkite', email = 'dcronkite+pypi@gmail.com' },
]
readme = 'README.md'
description = 'Targeted spell correction using edit distance and an initial vocabulary.'
homepage = 'https://github.com/kpwhri/precise_spelling_corrector'
dependencies = [
    'loguru',
    'hypothesis',
    'pytest',
    'regex',
    'regexify',
]
requires-python = '>=3.9'
keywords = ['spelling']
classifiers = [# https://pypi.org/classifiers/
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Science/Research',
    'Programming Language :: Python :: 3 :: Only',
    'Topic :: Text Processing :: Linguistic',
    'License :: OSI Approved :: MIT License',
]
[project.scripts]
run-precise-spelling-corrector = "precise_spell_correction.correct_text:correct_text_cmd"
